# django-boilerplate

./: .gitignore  .pylintrc  CLAUDE.md  Dockerfile  Dockerfile.celery  README.en.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/en/apps/: account.md  cms.md  device.md  feed.md  game.md  short-url.md  user.md
docs/en/deploy/: docker-setup.md
docs/en/security/: encryption.md
docs/en/settings/: library.md
docs/ko/apps/: account.md  cms.md  device.md  feed.md  game.md  short-url.md  user.md
docs/ko/deploy/: docker-setup.md
docs/ko/security/: encryption.md
docs/ko/settings/: library.md
src/: .env.example  Makefile
src/app/celery_log/: admin.py  models.py  signals.py
src/app/common/: choices.py  paginations.py  tests.py
src/app/device/: models.py
src/app/file/: apps.py  models.py  utils.py
src/app/log/: admin.py  apps.py  models.py
src/app/user/: admin.py  models.py  social_adapters.py
src/app/verifier/: models.py
src/app/withdrawal_user/: tasks.py
src/apps/agreement/: admin.py  apps.py  models.py
src/apps/cms/: admin.py  models.py
src/apps/common/: caches.py
src/apps/device/: admin.py  apps.py  models.py  utils.py
src/apps/feed/: admin.py  models.py
src/apps/file/: apps.py  models.py
src/apps/game/: models.py
src/apps/short_url/: admin.py  apps.py  models.py
src/apps/user/: admin.py  apps.py  forms.py  models.py  signals.py
src/conf/: authentications.py  aws.py  caches.py  celery.py  enums.py  exceptions.py  filters.py  firebase_config.py  hosts.py  openapi.py  routers.py  schedules.py  utils.py
(+122 files in other folders)
