[project]
name = "django-boilerplate"
version = "0.1.0"
dependencies = [
    "better-profanity>=0.7.0",
    "black>=25.1.0",
    "boto3>=1.40.6",
    "celery>=5.5.3",
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "django-debug-toolbar>=6.0.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-hosts>=7.0.0",
    "django-otp>=1.6.1",
    "django-redis>=6.0.0",
    "django-unfold>=0.63.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-nested-routers>=0.94.2",
    "drf-spectacular>=0.28.0",
    "firebase-admin>=7.1.0",
    "freezegun>=1.5.5",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "qrcode>=8.2",
    "requests>=2.32.4",
    "sentry-sdk>=2.34.1",
    "uuid7>=0.1.0",
    "whitenoise>=6.9.0",
]


[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = false
extend-exclude = '''
/(
    migrations
|   static
|   templates
|   venv
|   \.venv
|   env
)/
'''
